# Scream-Code

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SCREAM.md  USAGE.md  install.ps1  install.sh  install_mac.py  llm_config.json  llm_config.json.example  requirements.txt  setup.py  start.sh
bots/: feishu_ws_bot.py
rust/: Cargo.toml  TUI-ENHANCEMENT-PLAN.md
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: init.rs  llm_config.rs  main.rs  render.rs
rust/crates/rusty-claude-cli/src/tui/: mod.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  mock_parity_harness.rs  resume_slash_commands.rs
scream-code-website/: index.html
scripts/: screamcode-tui.sh
src/: QueryEngine.py  __init__.py  agent_cancel.py  agent_tools.py  bootstrap_graph.py  browser_vision.py  channel_tools.py  claw_config.py  command_graph.py  commands.py  context.py  context_compressor.py  direct_modes.py  llm_client.py  llm_onboarding.py  llm_settings.py  main.py  mcp_manager.py  memory_store.py  message_prune.py  model_manager.py  models.py  parity_audit.py  port_manifest.py  prefetch.py  project_memory.py  query_engine.py  remote_runtime.py  replLauncher.py  repl_slash_commands.py  repl_slash_helpers.py  repl_ui_render.py  runtime.py  sandbox_env.py  scream_theme.py  screamgo.html  session_store.py  setup.py  skills_registry.py  system_init.py  (+4 more)
tests/: conftest.py  test_agent_tools.py  test_browser_vision.py  test_channel_tools.py  test_claw_config.py  test_context_compressor.py  test_llm_client.py  test_llm_conversation_memory.py  (+16 more)
(+28 files in other folders)
