[package]
name = "scream-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "scream"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
command-group = "5"
crossterm = "0.28"
dotenvy = "0.15"
pulldown-cmark = "0.13"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
rustyline = "15"
tui-textarea = { version = "0.7", default-features = false, features = ["crossterm"] }
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
strip-ansi-escapes = "0.2"
syntect = "5"
textwrap = { version = "0.16", default-features = false, features = [
    "unicode-linebreak",
] }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
tokio-util = "0.7"
unicode-width = "0.2"
tools = { path = "../tools" }

[lints]
workspace = true

[dev-dependencies]
mock-anthropic-service = { path = "../mock-anthropic-service" }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
